--- a/client/src/styles/home.module.css
+++ b/client/src/styles/home.module.css
@@ -91,6 +91,10 @@ border-radius: 45px;
  background: #fff;
 color:  #015d3a;
 appearance:none;
+text-transform: uppercase;
+font-weight: 500;
+font-family: 
+'Quicksand', sans-serif;
   
     
 
